Fix icons alignment
Icon in NavMenu were placed below text

--- a/InteligentApp/Components/Layout/NavMenu.razor.css
+++ b/InteligentApp/Components/Layout/NavMenu.razor.css
@@ -67,9 +67,8 @@
         height: 3rem;
         display: flex;
         align-items: center;
-        line-height: 3rem;
         width: 100%;
-    }
+ }
 
 .nav-item ::deep a.active {
     background-color: rgba(255,255,255,0.37);
